Added more endpoints

--- a/orders/src/main/resources/application.properties
+++ b/orders/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+# jdbc:h2:mem:testdb - this is for the console log in
 
 server.port=${PORT:2019}
 
